--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/setup-go@v2-beta
         with:
           go-version: '^1.13.1' # The Go version to download (if necessary) and use.
-      - run: |
+        run: |
           go version
           go get -v -u github.com/go-flutter-desktop/hover
           sudo apt-get install -y gcc libc6-dev libgl1-mesa-dev xorg-dev
@@ -49,7 +49,6 @@ jobs:
           export PATH=$PATH:$FLUTTER_DART_HOME
           hover build linux
       - uses: actions/upload-artifact@v1
-      - name: Upload exectuables
         with:
           name: homework
           path: go/build/outputs
