--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -41,8 +41,10 @@ jobs:
       - run: |
           go version
           export PATH=$PATH:$(go env GOPATH)/bin
+          echo $(go env GOPATH)
           go get -v -u github.com/go-flutter-desktop/hover
           sudo apt-get install -y gcc libc6-dev libgl1-mesa-dev xorg-dev
+          ls $(go env GOPATH)/bin
 
       - name: Build exectuables
         env:
