--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,8 +1,9 @@
 name: publish-linux
 
 on:
-  watch:
-    types: [started]
+  push:
+    branches:    
+      - ci-cd-publish-linux
 
 env:
   flutter_channel: 'stable'
@@ -37,7 +38,7 @@ jobs:
           flutter-version: ${{ env.flutter_version }}
       - uses: actions/setup-go@v2-beta
         with:
-          go-version: '^1.13.1' # The Go version to download (if necessary) and use.
+          go-version: '^1.13.8' # The Go version to download (if necessary) and use.
       - run: |
           go version
           export PATH=$PATH:$(go env GOPATH)/bin
@@ -53,9 +54,10 @@ jobs:
         run: |
           export PATH=$PATH:$(go env GOPATH)/bin
           ls $(go env GOPATH)/bin
-          echo $PATH
           export PATH=$PATH:$FLUTTER_DART_HOME
           echo $PATH
+          hover -h
+          ls .
           hover build linux
 
       - uses: actions/upload-artifact@v1
