--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -46,9 +46,11 @@ jobs:
           FLUTTER_DART_HOME: ${{ env.FLUTTER_HOME }}/bin/cache/dart-sdk/bin
         run: |
           go get -v -u github.com/go-flutter-desktop/hover
-          sudo apt-get install -y gcc libc6-dev libgl1-mesa-dev xorg-dev
+          sudo apt-get install gcc libc6-dev
+          sudo apt-get install libgl1-mesa-dev xorg-dev
           export PATH=$PATH:$(go env GOPATH)/bin
           export PATH=$PATH:$FLUTTER_DART_HOME
+# flutter pub get
           hover build linux
 
       - uses: actions/upload-artifact@v1
