--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -49,6 +49,8 @@ jobs:
           sudo apt-get install gcc libc6-dev
           sudo apt-get install libgl1-mesa-dev xorg-dev
           export PATH=$PATH:$(go env GOPATH)/bin
+          export PATH=$PATH:$FLUTTER_DART_HOME
+          echo $PATH
           hover build linux
 
       - uses: actions/upload-artifact@v1
