--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,6 +53,13 @@ jobs:
           key: ${{ runner.OS }}-flutter-cache-${{ env.flutter_version }}
           restore-keys: |
             ${{ runner.OS }}-flutter-cache-
+      - name: Cache Golang dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
       - uses: subosito/flutter-action@v1
         with:
