--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -44,6 +44,9 @@ jobs:
           channel: ${{ env.flutter_channel }}
           flutter-version: ${{ env.flutter_version }}
       - uses: actions/setup-go@v2-beta
+        env:
+          GOPATH: $HOME
+          GOBIN: $HOME/bin
         with:
           go-version: '1.13.3' # The Go version to download (if necessary) and use.
       - run: |
@@ -51,6 +54,7 @@ jobs:
       - name: Build exectuables
         env:
           FLUTTER_DART_HOME: ${{ env.FLUTTER_HOME }}/bin/cache/dart-sdk/bin
+
         run: |
           export PATH=$PATH:$(go env GOPATH)/bin
           export PATH=$PATH:$FLUTTER_DART_HOME
