--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -44,9 +44,6 @@ jobs:
           channel: ${{ env.flutter_channel }}
           flutter-version: ${{ env.flutter_version }}
       - uses: actions/setup-go@v2-beta
-        env:
-          GOPATH: $HOME
-          GOBIN: $HOME/bin
         with:
           go-version: '1.13.3' # The Go version to download (if necessary) and use.
       - run: |
@@ -54,7 +51,6 @@ jobs:
       - name: Build exectuables
         env:
           FLUTTER_DART_HOME: ${{ env.FLUTTER_HOME }}/bin/cache/dart-sdk/bin
-
         run: |
           export PATH=$PATH:$(go env GOPATH)/bin
           export PATH=$PATH:$FLUTTER_DART_HOME
@@ -66,6 +62,8 @@ jobs:
           ls /opt/hostedtoolcache/go/1.13.3/x64/bin
           echo 'ls /home/runner/go/bin'
           ls /home/runner/go/bin
+          ls /home/runner/go
+          echo $(go env)
           hover build linux
 
       - uses: actions/upload-artifact@v1
