--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -64,7 +64,7 @@ jobs:
           ls /home/runner/go/bin
           ls /home/runner/go
           echo $(go env)
-          hover build linux
+          sudo hover build linux
 
       - uses: actions/upload-artifact@v1
         with:
