--- a/.github/workflows/publish-linux.yaml
+++ b/.github/workflows/publish-linux.yaml
@@ -71,4 +71,4 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: homework
-          path: go/build/outputs
+          path: go/build/outputs/linux
