--- a/.github/workflows/publish-macos.yaml
+++ b/.github/workflows/publish-macos.yaml
@@ -66,7 +66,7 @@ jobs:
           ls /home/runner/go/bin
           ls /home/runner/go
           echo $(go env)
-          hover build darwin-bundle
+          hover build darwin-bundle --docker
 
       - uses: actions/upload-artifact@v1
         with:
