Rename publsih actions to the name depends on OS

--- a/.github/workflows/publish-linux.yaml
+++ b/.github/workflows/publish-linux.yaml
@@ -70,5 +70,5 @@ jobs:
 
       - uses: actions/upload-artifact@v1
         with:
-          name: homework
+          name: linux
           path: go/build/outputs/linux
