--- a/.github/workflows/publish-windows.yaml
+++ b/.github/workflows/publish-windows.yaml
@@ -65,5 +65,5 @@ jobs:
 
       - uses: actions/upload-artifact@v1
         with:
-          name: homework
+          name: windows
           path: go/build/outputs/windows
