--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   flutter_bloc: ^3.1.0
   equatable: ^1.0.3
 
+  path_provider: ^1.6.5
+  path_provider_macos: ^0.0.4
+  path: "^1.6.4"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
