--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: subtitle_wand
-description: An example project for flutter-desktop-embedding.
+description: An Universal subtitle solution for helping video making without dependency of any software.
 
 version: 0.1.1
 
