Add ffmpeg detection

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ _macro_editor/
 coverage/
 packages
 .flutter-plugins
+.flutter-plugins-dependencies
 # Since the current expectation is that clients are using Flutter head,
 # and Dart SDK changes unlock dependencies, pubspec.lock isn't useful.
 # Ignore it since it just creates noise. When there's a system in place
