--- a/.github/workflows/publish-windows.yaml
+++ b/.github/workflows/publish-windows.yaml
@@ -43,7 +43,7 @@ jobs:
         with:
           channel: ${{ env.flutter_channel }}
           flutter-version: ${{ env.flutter_version }}
-      - uses: actions/setup-go@v2-beta
+      - uses: actions/setup-go@v2
         with:
           go-version: '1.13.3' # The Go version to download (if necessary) and use.
       - run: |
