--- a/.github/workflows/publish-windows.yaml
+++ b/.github/workflows/publish-windows.yaml
@@ -55,15 +55,15 @@ jobs:
           FLUTTER_DART_HOME: ${{ env.FLUTTER_HOME }}/bin/cache/dart-sdk/bin
         run: |
           flutter doctor
-          export PATH=$PATH:${go env GOPATH}/bin
-          export PATH=$PATH:$FLUTTER_DART_HOME
+          echo $(go env GOPATH)/bin | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo $FLUTTER_DART_HOME | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           go get -v -u github.com/go-flutter-desktop/hover
-          sudo apt-get install build-essential libgl1-mesa-dev 
-          sudo apt-get install gcc libc6-dev
-          sudo apt-get install libgl1-mesa-dev xorg-dev
           hover build windows
           rm go/build/outputs/windows/flutter_engine.pdb -fo
-
+        # sudo apt-get install build-essential libgl1-mesa-dev 
+        # sudo apt-get install gcc libc6-dev
+        # sudo apt-get install libgl1-mesa-dev xorg-dev
+        # export PATH=$PATH:$FLUTTER_DART_HOME
       - uses: actions/upload-artifact@v1
         with:
           name: windows
