--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,9 +26,10 @@ on:
     - 'fonts/**'
 
 env:
-  flutter_channel: 'beta'
-  flutter_version: '1.22.0-12.4.pre'
-
+  flutter_channel: 'stable'
+  flutter_version: '1.22.4'
+  GO111MODULE: 'on'
+  
 jobs:
   # Analyze and test each core package.
   commit-review:
