--- a/.github/workflows/publish-all.yaml
+++ b/.github/workflows/publish-all.yaml
@@ -6,8 +6,8 @@ on:
       - ci-cd-publish/**
 
 env:
-  flutter_channel: 'beta'
-  flutter_version: '1.22.0-12.4.pre'
+  flutter_channel: 'stable'
+  flutter_version: '1.22.4'
 
 jobs:
   # Analyze and test each core package.
