--- a/.github/workflows/publish-macos.yaml
+++ b/.github/workflows/publish-macos.yaml
@@ -6,9 +6,10 @@ on:
       - ci-cd-publish-macos/**
 
 env:
-  flutter_channel: 'beta'
-  flutter_version: '1.22.0-12.4.pre'
-
+  flutter_channel: 'stable'
+  flutter_version: '1.22.4'
+  GO111MODULE: 'on'
+  
 jobs:
   # Analyze and test each core package.
   publish-macos:
