--- a/.github/workflows/publish-windows.yaml
+++ b/.github/workflows/publish-windows.yaml
@@ -13,7 +13,7 @@ env:
 jobs:
   # Analyze and test each core package.
   publish-windows:
-    # if: github.actor == github.event.repository.owner.login
+    if: github.actor == github.event.repository.owner.login
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
