--- a/.github/workflows/publish-linux.yaml
+++ b/.github/workflows/publish-linux.yaml
@@ -13,7 +13,7 @@ env:
 jobs:
   # Analyze and test each core package.
   publish-linux:
-    if: ${{ github.actor.login == github.event.repository.owner.login }}
+    if: ${{ github.event.repository.owner.login == 'Tokenyet' }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
