--- a/.github/workflows/publish-macos.yaml
+++ b/.github/workflows/publish-macos.yaml
@@ -13,7 +13,7 @@ env:
 jobs:
   # Analyze and test each core package.
   publish-macos:
-=    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         folder: ['.']
