--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   pedantic: ^1.9.2
   url_launcher: ^5.7.10
+  font_awesome_flutter: ^8.10.0
   
 dev_dependencies:
   flutter_test:
