fix: :bug: use custom picker and change dev root dir
This change prevent windows from changing current working directory.\n If https://github.com/miguelpruivo/flutter_file_picker/pull/1022 merged, then change back to official version.\n Change root directory for not messing up project.

--- a/packages/font_repository/pubspec.yaml
+++ b/packages/font_repository/pubspec.yaml
@@ -26,7 +26,10 @@ dependencies:
   json_annotation: ^4.4.0
   wand_api:
     path: ../wand_api
-  file_picker: ^4.5.1
+  file_picker:
+    git:
+      url: https://github.com/Tokenyet/flutter_file_picker.git
+      ref: ac2387a6a6a1c51102bba15f5def335d07e623bd
 
 dev_dependencies:
   flutter_test:
