--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,10 @@ dependencies:
   utf: ^0.9.0+5
   flutter_colorpicker: ^1.0.3
   configurable_expansion_tile_null_safety: ^2.0.0
-  file_picker: ^4.5.1
+  file_picker:
+    git:
+      url: https://github.com/Tokenyet/flutter_file_picker.git
+      ref: ac2387a6a6a1c51102bba15f5def335d07e623bd
   draggable_scrollbar: ^0.1.0
 
   bloc: ^8.0.3
