--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  bloc_test: ^9.0.3
+  mocktail: ^0.3.0
 
   build_runner: ^2.1.8
   build_version: ^2.1.0
