--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,6 +115,7 @@ jobs:
       MACHINE_OS: windows
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: FedericoCarboni/setup-ffmpeg@v1
         id: setup-ffmpeg
       - uses: subosito/flutter-action@v2.3.0
@@ -133,6 +134,7 @@ jobs:
       MACHINE_OS: linux
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: FedericoCarboni/setup-ffmpeg@v1
         id: setup-ffmpeg
       - uses: subosito/flutter-action@v2.3.0
@@ -151,6 +153,7 @@ jobs:
       MACHINE_OS: macos
     runs-on: macos-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: FedericoCarboni/setup-ffmpeg@v1
         id: setup-ffmpeg
       - uses: subosito/flutter-action@v2.3.0
